--- a/public/styles/Menu.css
+++ b/public/styles/Menu.css
@@ -7,3 +7,12 @@
     width: calc(100dvw - 2 * 1.4rem);
     height: calc(100svh - 2 * 1.4rem);
 }
+
+.text-clip-inverse {
+    color: white;
+    mix-blend-mode: difference;
+}
+
+.isolate {
+    isolation: isolate;
+}
