--- a/public/styles/Menu.css
+++ b/public/styles/Menu.css
@@ -5,14 +5,5 @@
 
 #hero-container {
     width: calc(100dvw - 2 * 1.4rem);
-    height: calc(100svh - 2 * 1.4rem);
-}
-
-.text-clip-inverse {
-    color: white;
-    mix-blend-mode: difference;
-}
-
-.isolate {
-    isolation: isolate;
+    height: calc(100svh - 2 * 1.4rem - 2.2rem);
 }
