Add new custom blue and purple palette

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,9 +70,11 @@
 @layer base {
   * {
     @apply border-border !scroll-smooth;
+    @apply text-blue-800;
   }
   body {
     @apply bg-background text-foreground;
+    font-family: var(--font-clash);
   }
   button {
     @apply active:outline-none;
@@ -90,43 +92,36 @@
 }
 
 h1 {
-  font-family: var(--font-clash);
   font-weight: 700;
   font-size: 40px;
   letter-spacing: 0.04em;
 }
 
 h2 {
-  font-family: var(--font-clash);
   font-weight: 600;
   font-size: 32px;
 }
 
 h3 {
-  font-family: var(--font-clash);
   font-weight: 600;
   font-size: 24px;
 }
 
 h4 {
-  font-family: var(--font-clash);
   font-weight: 600;
   font-size: 20px;
 }
 
 h5 {
-  font-family: var(--font-clash);
   font-weight: 500;
   font-size: 16px;
 }
 
 h6 {
-  font-family: var(--font-clash);
   font-weight: 500;
   font-size: 12px;
 }
 
 p {
-  font-family: var(--font-clash);
   font-weight: 400;
 }
